[package]
name = "junit-notify"
description = "Watch a directory containing junit xml reports, and emit OS notifications upon changes."
license = "MIT"
version = "1.0.0"
repository = "https://github.com/bspaulding/junit-notify"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4"
hotwatch = "0.4.5"
xml-rs = "0.8"
log = "0.4.14"
simple_logger = "1.13.0"
clap = "2.33"
